--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+*.pyc
 
 # C extensions
 *.so
@@ -41,6 +42,8 @@ coverage.xml
 .mr.developer.cfg
 .project
 .pydevproject
+*.komodo*
+*komodo*
 
 # Rope
 .ropeproject
